js/src/tests/test262/built-ins/Error/prototype/toString/S15.11.4.4_A2.js
assert
.
notSameValue
(
new
Error
(
"
Error
"
)
.
toString
(
)
undefined
'
The
value
of
toStr
is
expected
to
not
equal
undefined
'
)
;
reportCompare
(
0
0
)
;
